# ResumeGenerator

./: .gitignore  Dockerfile  LICENSE  TODO.md  cli.py  main.py  output.aux  output.dvi  output.fdb_latexmk  output.fls  output.out  output.tex  pyproject.toml
ResumeGenerator/: __init__.py  __main__.py  api.py  cli.py  cli_app.py  example.py  main.py
ResumeGenerator/example/: example.py
ResumeGenerator/example/inputs/: example_resume_data.json
ResumeGenerator/example/outputs/: John_Doe_SINGLE_COLUMN_PHOTO.tex  John_Doe_SingleColumnCompressedTemplate.tex  John_Doe_SingleColumnNoPhotoTemplate.tex  John_Doe_SingleColumnPhoto.tex  John_Doe_SingleColumnPhotoCompressedTemplate.tex  single_column_nophoto.tex  single_column_photo.tex
ResumeGenerator/inputs/: example_resume_data.json
ResumeGenerator/outputs/: example_resume.tex  single_column_nophoto.tex  single_column_photo.tex
ResumeGenerator/src/: __init__.py  cli_app.py  config.py  database.py  firebase.py  main.py  resume_generator.py
ResumeGenerator/src/API/: __init__.py  api.py  authentication.py  base.py  data.py  database.py  resume.py
ResumeGenerator/tests/: test_cli_application.py  test_resume_generator.py
example/: example.py
example/outputs/: John_Doe_SINGLE_COLUMN_PHOTO.tex
inputs/: example_resume_data.json  resume_data.json
outputs/: example_resume.tex  resume.tex
src/: __init__.py  resume_generator.py
src/API/: api.py  data.py  resume.py
src/CLI/: cli_app.py
src/ResumeGenerator/: __init__.py
src/data/: __init__.py  serializer.py
src/formats/: __init__.py  __single_column_content.py  single_column_nophoto.py  single_column_nophoto_preamble.tex  single_column_photo.py
src/latex/: __init__.py  latex_document.py  latex_headers.py
(+65 files in other folders)
